plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/annotationApplicationWithoutName.k1.kt
// ERROR: Unresolved reference: NO_NAME_PROVIDED
@NO_NAME_PROVIDED
internal class Test
